--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
 </head>
 <body>
     <header>
-        ciao <br> ciao
-        <H1>HELLO WORLD</H1>
+        <div class="header_container">
+            <img class="white_background" src="img/Logo.png" alt="Logo Boolean">
+            <h1 class="white_background">Tobolist</h1>
+        </div>
+
     </header>
     <body>
         
