--- a/index.html
+++ b/index.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <!-- GOOGLE FONT -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
-    <!-- /GOOGLE FONT -->
-    <title>Tobolist</title>
-</head>
-<body>
-    <header>
-        <div class="header_container">
-            <img class="white_background" src="img/Logo.png" alt="Logo Boolean">
-            <h1 class="white_background">Tobolist</h1>
-        </div>
-
-    </header>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <!-- GOOGLE FONT -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+        <!-- /GOOGLE FONT -->
+        <title>Tobolist</title>
+    </head>
     <body>
+        <!-- HEADER -->
+        <header>
+            <div class="header_container">
+                <img class="white_background" src="img/Logo.png" alt="Logo Boolean">
+                <h1 class="white_background">Tobolist</h1>
+            </div>
+        </header>
+        <!-- / HEADER -->
+
+        <!-- MAIN -->
+        <main class="white_background">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, corrupti facilis tempore inventore similique optio cum sunt minus dolorem eveniet nobis at, dolores qui, cumque rem! Rem animi laudantium dolorem!
+        </main>
+        <!-- /MAIN -->
         
     </body>
-</body>
 </html>
