--- a/index.html
+++ b/index.html
@@ -24,8 +24,16 @@
         <!-- / HEADER -->
 
         <!-- MAIN -->
-        <main class="white_background">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, corrupti facilis tempore inventore similique optio cum sunt minus dolorem eveniet nobis at, dolores qui, cumque rem! Rem animi laudantium dolorem!
+        <main class="container white_background">
+            <div class="buttons white_background">
+                <button class="selected">Add Task</button>
+                <button>Add Section</button>
+            </div>
+            <div class="white_background">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus sequi, veniam suscipit perspiciatis quasi excepturi est expedita libero aperiam in possimus corrupti animi architecto sint sed dolores nemo eum aut!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo corrupti, adipisci fuga blanditiis rerum quae consectetur commodi libero culpa soluta iure fugiat quibusdam ipsam reprehenderit, quis minima dolorum eligendi nam.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste, qui! Quod aliquid voluptates dolorum vel ex quia explicabo dicta inventore, nesciunt eveniet officiis, reiciendis odio? Sed ratione non magni dolor.
+            </div>
         </main>
         <!-- /MAIN -->
         
