--- a/index.html
+++ b/index.html
@@ -25,14 +25,30 @@
 
         <!-- MAIN -->
         <main class="container white_background">
-            <div class="buttons white_background">
+            <!-- BUTTONS PART -->
+            <div class="white_background">
                 <button class="selected">Add Task</button>
                 <button>Add Section</button>
             </div>
-            <div class="white_background">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus sequi, veniam suscipit perspiciatis quasi excepturi est expedita libero aperiam in possimus corrupti animi architecto sint sed dolores nemo eum aut!
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo corrupti, adipisci fuga blanditiis rerum quae consectetur commodi libero culpa soluta iure fugiat quibusdam ipsam reprehenderit, quis minima dolorum eligendi nam.
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste, qui! Quod aliquid voluptates dolorum vel ex quia explicabo dicta inventore, nesciunt eveniet officiis, reiciendis odio? Sed ratione non magni dolor.
+            <!-- END BUTTONS -->
+
+            <div class="list_container white_background">
+                <ul class="primary_list white_background">
+                    <li class="white_background"> <span>&#9660</span>New Task
+                        <ul class="white_background secondary_list">
+                            <li>Quarterly Newsletter</li>
+                        </ul>
+                    </li>
+                    <li class="white_background">&#9660;Today
+                        <ul class="white_background secondary_list">
+                        </ul>
+                    </li>
+                    <li class="white_background">&#9660;Upcoming
+                        <ul class="white_background secondary_list"> 
+
+                        </ul>
+                    </li>
+                </ul>    
             </div>
         </main>
         <!-- /MAIN -->
