--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
 
             <div class="list_container white_background">
                 <ul class="primary_list white_background">
-                    <li class="white_background"> <span>&#9660</span>New Task
+                    <li class="white_background"><span class="triangle">&#129171;</span>New Task
                         <ul class="white_background secondary_list">
-                            <li>Quarterly Newsletter</li>
+                            <li><span class="ok">&#10003;</span> Quarterly Newsletter <span class="category background_lightblue">editorial</span></li>
                         </ul>
                     </li>
-                    <li class="white_background">&#9660;Today
+                    <li class="white_background">&#129171;Today
                         <ul class="white_background secondary_list">
                         </ul>
                     </li>
-                    <li class="white_background">&#9660;Upcoming
+                    <li class="white_background">&#129171;Upcoming
                         <ul class="white_background secondary_list"> 
 
                         </ul>
