updated background comment colors

--- a/index.html
+++ b/index.html
@@ -31,21 +31,31 @@
                 <button>Add Section</button>
             </div>
             <!-- END BUTTONS -->
-
+            <!-- MAIN CONTAINER -->
             <div class="list_container white_background">
+                <!-- PRIMARY LIST -->
                 <ul class="primary_list white_background">
                     <li class="white_background"><span class="triangle">&#129171;</span>New Task
+                        <!-- FIRST SUBLIST -->
                         <ul class="white_background secondary_list">
-                            <li><span class="ok">&#10003;</span> Quarterly Newsletter <span class="category background_lightblue">editorial</span></li>
+                            <li><span class="check ok">&#10003;</span> Quarterly Newsletter <span class="category background_lightblue">editorial</span></li>
                         </ul>
+                        <!-- /FIRST SUBLIST -->
                     </li>
                     <li class="white_background">&#129171;Today
                         <ul class="white_background secondary_list">
+                            <li><span class="check ok">&#10003;</span> Quarterly Newsletter <span class="category background_lightblue">editorial</span></li>
+                            <li><span class="check ok">&#10003;</span> Quarterly Newsletter <span class="category background_lightblue">editorial</span></li>
+                            <li><span class="check not_ok">&#10003;</span> Quarterly Newsletter <span class="category background_lightblue">editorial</span></li>
+                            <li><span class="check ok">&#10003;</span> Quarterly Newsletter <span class="category background_lightblue">editorial</span></li>
                         </ul>
                     </li>
                     <li class="white_background">&#129171;Upcoming
                         <ul class="white_background secondary_list"> 
-
+                            <li><span class="check not_ok">&#10003;</span> Quarterly Newsletter <span class="category background_lightblue">editorial</span></li>
+                            <li><span class="check ok">&#10003;</span> Quarterly Newsletter <span class="category background_lightblue">editorial</span></li>
+                            <li><span class="check ok">&#10003;</span> Quarterly Newsletter <span class="category background_lightblue">editorial</span></li>
+                            <li><span class="check ok">&#10003;</span> Quarterly Newsletter <span class="category background_lightblue">editorial</span></li>
                         </ul>
                     </li>
                 </ul>    
