main list compiled

--- a/index.html
+++ b/index.html
@@ -38,24 +38,24 @@
                     <li class="white_background"><span class="triangle">&#129171;</span>New Task
                         <!-- FIRST SUBLIST -->
                         <ul class="white_background secondary_list">
-                            <li><span class="check ok">&#10003;</span> Quarterly Newsletter <span class="category background_lightblue">editorial</span></li>
+                            <li><span class="check ok">&#10003;</span> Quarterly Newsletter <span class="category background_lightblue">Editorial</span></li>
                         </ul>
                         <!-- /FIRST SUBLIST -->
                     </li>
                     <li class="white_background">&#129171;Today
                         <ul class="white_background secondary_list">
-                            <li><span class="check ok">&#10003;</span> Quarterly Newsletter <span class="category background_lightblue">editorial</span></li>
-                            <li><span class="check ok">&#10003;</span> Quarterly Newsletter <span class="category background_lightblue">editorial</span></li>
-                            <li><span class="check not_ok">&#10003;</span> Quarterly Newsletter <span class="category background_lightblue">editorial</span></li>
-                            <li><span class="check ok">&#10003;</span> Quarterly Newsletter <span class="category background_lightblue">editorial</span></li>
+                            <li><span class="check ok">&#10003;</span> Recruiting blog post <span class="category background_lightblue">Editorial</span></li>
+                            <li><span class="check ok">&#10003;</span> Mobile app launch <span class="category background_lightpurple">Q1 Goals</span></li>
+                            <li><span class="check not_ok">&#10003;</span> Interview John H. <span class="category background_lightgreen">Recruiting</span></li>
+                            <li><span class="check ok">&#10003;</span> ummit update to mobile storefronts <span class="category background_lightorange">Mobile</span></li>
                         </ul>
                     </li>
                     <li class="white_background">&#129171;Upcoming
                         <ul class="white_background secondary_list"> 
-                            <li><span class="check not_ok">&#10003;</span> Quarterly Newsletter <span class="category background_lightblue">editorial</span></li>
-                            <li><span class="check ok">&#10003;</span> Quarterly Newsletter <span class="category background_lightblue">editorial</span></li>
-                            <li><span class="check ok">&#10003;</span> Quarterly Newsletter <span class="category background_lightblue">editorial</span></li>
-                            <li><span class="check ok">&#10003;</span> Quarterly Newsletter <span class="category background_lightblue">editorial</span></li>
+                            <li><span class="check not_ok">&#10003;</span> Schedule meeting with Alex <span class="category "></span></li>
+                            <li><span class="check ok">&#10003;</span> Homepage refresh <span class="category background_lightpink">Website</span></li>
+                            <li><span class="check ok">&#10003;</span> Onboard new Sales team members <span class="category background_greengrass">Sales</span></li>
+                            <li><span class="check ok">&#10003;</span> Review editorial calendar <span class="category background_lightblue">Editorial</span></li>
                         </ul>
                     </li>
                 </ul>    
