fix separator button lists

--- a/index.html
+++ b/index.html
@@ -24,16 +24,15 @@
         <!-- / HEADER -->
 
         <!-- MAIN -->
-        <main class="container white_background">
+        <main>
             <!-- BUTTONS PART -->
-            <div class="white_background">
+            <div class="container top_half white_background">
                 <button class="selected">Add Task</button>
                 <button>Add Section</button>
             </div>
-            <hr>
             <!-- END BUTTONS -->
             <!-- MAIN CONTAINER -->
-            <div class="list_container white_background">
+            <div class="container bottom_half white_background">
                 <!-- PRIMARY LIST -->
                 <ul class="primary_list white_background">
                     <li class="white_background"><span class="triangle">&#129171;</span>New Task
